--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@ header li {
   -3px -0px var(--shadow-nav-width) var(--shadow-main-nav),
   0px 3px var(--shadow-nav-width) var(--shadow-main-nav), 
   0px -3px var(--shadow-nav-width) var(--shadow-main-nav);
+
+  transition: all 0.4s ease 0s;
+}
+
+header li:hover {
+  color: rgb(244, 29, 29);
+  cursor: pointer;
 }
 
 header h1 {
@@ -305,10 +312,54 @@ h3 {
   line-height: 1.8;
 }
 
-.button-wrapper {
+/* TODO ボタン作り */
+/* .button-wrapper {
   text-align: center;
+} */
+
+.read-more {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 160px;
 }
 
+.button {
+  color: inherit;
+  font-size: 14px;
+  position: relative;
+  display: inline-block;
+  padding: 15px 45px;
+}
+
+.button::before {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 20px;
+  width: 30px;
+  content: '';
+  transition: all .3s;
+  border-top: 2px solid #E03131;
+  border-left: 2px solid #E03131;
+}
+
+.button::after {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 30px;
+  height: 20px;
+  content: '';
+  transition: all .3s;
+  border-right: 2px solid #E03131;
+  border-bottom: 2px solid #E03131;
+}
+
+.button:hover::after,
+.button:hover::before {
+  width: 98.8%;
+  height: 95%;
+}
 
 /* ************************
 // location
